--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Hello Bulma!</title>
+        <title>Criptografia Simples com xOr - Uninter</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="columns">
-            <div class="column is-5 is-offset-3">
+            <div class="column is-6 is-offset-2">
                 <section class="section">
                     <div class="container">
                         <h1 class="title">
