--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         <i style="color:#586E75;">// coloca o resto da divisão na array</i>
         bin[<i style="color:#B58900;">i</i>] <span style="color:#DA1039;">=</span> <i style="color:#B58900;">code</i> <span style="color:#DA1039;">%</span> <span style="color:#6F5499;">2</span>;
         
-        <i style="color:#586E75;">// Math.gloot(...) elimina a parte decimal</i>
+        <i style="color:#586E75;">// Math.floor(...) elimina a parte decimal</i>
        	<i style="color:#B58900;">code</i> <span style="color:#DA1039;">=</span> <span style="color:#859900;">Math</span>.<span style="color:#859900;">floor</span>(<i style="color:#B58900;">code</i> <span style="color:#DA1039;">/</span> <span style="color:#6F5499;">2</span>);
 
     } <span style="color:#DA1039;">while</span> (<i style="color:#B58900;">code</i> <span style="color:#DA1039;">/</span> <span style="color:#6F5499;">2</span> <span style="color:#DA1039;">></span> <span style="color:#6F5499;">0</span>);
