--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         	pre {
             		overflow-x: hidden;
             	}
+		::selection {
+			background-color::#33D1B1;
+			color: white;
+		}
         </style>
     </head>
     <body>
