--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             		overflow-x: hidden;
             	}
 		::selection {
-			background-color::#33D1B1;
+			background-color:#33D1B1;
 			color: white;
 		}
         </style>
