--- a/index.html
+++ b/index.html
@@ -254,19 +254,19 @@
 	<i style="color:#586E75;">// str recebe o valor da caixa de entrada</i>
 	<span style="color:#268BD2;">let</span> str <span style="color:#DA1039;">=</span> input.value,
 	    <i style="color:#586E75;">// k vai conter a chave</i>
-            <i style="color:#586E75;">// transforma em string e põe cada caractere
+            <i style="color:#586E75;">// transforma em string e põe cada caractere</i>
             <i style="color:#586E75;">// em uma posição da array k</i>
             k <span style="color:#DA1039;">=</span> (key.value).<span style="color:#859900;">toString</span>().<span style="color:#859900;">split</span>("");
 
 	<i style="color:#586E75;">// transformando a chave em binário</i>
 	<span style="color:#DA1039;">for</span> (<i style="color:#B58900;">i</i> <span style="color:#DA1039;">=</span> 0; <i style="color:#B58900;">i</i> <span style="color:#DA1039;"><</span> k.length; <i style="color:#B58900;">i</i> <span style="color:#DA1039;">++</span>) {
-		k[<i style="color:#B58900;">i</i>] <span style="color:#DA1039;">=</span> int2Bin(parseInt(k[<i style="color:#B58900;">i</i>]));
+		k[<i style="color:#B58900;">i</i>] <span style="color:#DA1039;">=</span> int2Bin(<span style="color:#859900;">parseInt</span>(k[<i style="color:#B58900;">i</i>]));
 	}
 
 	<i style="color:#586E75;">// xor pega o res da operação xor</i>
 	<i style="color:#586E75;">// que acaba retornando a formas em binário</i>
 	<i style="color:#586E75;">// dos decimais ASCII</i>
-	<span style="color:#268BD2;">let</span> xor <span style="color:#DA1039;">=</span> xOr(str, k.join(<span style="color:#B58900;">", "</span>)),
+	<span style="color:#268BD2;">let</span> xor <span style="color:#DA1039;">=</span> xOr(str, k.<span style="color:#859900;">join</span>(<span style="color:#B58900;">", "</span>)),
 	   <i style="color:#586E75;">// split separa em forma de array</i>
 	   <i style="color:#586E75;">// o xor, a cada ocorrência de ", "</i>
 	   <i style="color:#586E75;">// que serve para separar o binário</i>
