--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             k <span style="color:#DA1039;">=</span> (key.value).<span style="color:#859900;">toString</span>().<span style="color:#859900;">split</span>(<span style="color:#B58900;">""</span>);
 
 	<i style="color:#586E75;">// transformando a chave em binário</i>
-	<span style="color:#DA1039;">for</span> (<i style="color:#B58900;">i</i> <span style="color:#DA1039;">=</span> 0; <i style="color:#B58900;">i</i> <span style="color:#DA1039;"><</span> k.length; <i style="color:#B58900;">i</i> <span style="color:#DA1039;">++</span>) {
+	<span style="color:#DA1039;">for</span> (<i style="color:#B58900;">i</i> <span style="color:#DA1039;">=</span> <span style="color:#6F5499;">0</span>; <i style="color:#B58900;">i</i> <span style="color:#DA1039;"><</span> k.length; <i style="color:#B58900;">i</i> <span style="color:#DA1039;">++</span>) {
 		k[<i style="color:#B58900;">i</i>] <span style="color:#DA1039;">=</span> int2Bin(<span style="color:#859900;">parseInt</span>(k[<i style="color:#B58900;">i</i>]));
 	}
 
